feat(controller): implement dynamic context MVP
